[workspace]
members = [
  "packages/*",
  "contracts/accessories/*",
  "contracts/main/*",
  "scripts",
]

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/DA0-DA0/polytone"
rust-version = "1.67"
version = "1.0.2"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true   # very important, do not turn these off.
panic = 'abort'
rpath = false

[workspace.dependencies]
polytone = { package = "abstract-polytone", path = "packages/polytone", version = "1.0.0" }
polytone-proxy = { package = "abstract-polytone-proxy", path = "contracts/main/proxy", version = "2.0.0-rc" }
polytone-note = { package = "abstract-polytone-note", path = "contracts/main/note", version = "2.0.0-rc" }
polytone-voice = { package = "abstract-polytone-voice", path = "contracts/main/voice", version = "2.0.0-rc" }
cw-orch-polytone = { package = "abstract-cw-orch-polytone", path = "packages/cw-orch-polytone", version = "2.0.0-rc" }

cosmwasm-schema = "1.2.1"
cosmwasm-std = { version = "1.5.0", features = ["ibc3"] }
cw-storage-plus = "1.0.1"
cw-utils = "1.0.1"
cw2 = "1.0.1"

serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
# the sha2 version here is the same as the one used by
# cosmwasm-std. when bumping cosmwasm-std, this should also be
# updated. to find cosmwasm_std's sha function:
# ```cargo tree --package cosmwasm-std```
sha2 = "0.10.6"

# dev-dependencies

cw-orch = { version = "0.22.0-rc" }

cw-multi-test = "0.16.2"
anyhow = { version = "1.0.51" }
