[package]
name = "scripts"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
cw-orch.workspace = true
cw-orch-polytone = { version = "1.0.0", path = "../packages/interface" }
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
